--- a/inventory/pslab.yml
+++ b/inventory/pslab.yml
@@ -1,3 +1,11 @@
+all:
+  hosts:
+    kafka1:
+      ansible_host: 10.0.133.232
+    kafka2:
+      ansible_host: 10.0.156.191
+    kakfa3:
+      ansible_host: 10.0.38.16
 kafka:
   hosts:
     kafka1:
