--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -58,6 +58,7 @@
         #     [Install]
         #     WantedBy=default.target
     - name: Enable service kafka and ensure it is not masked
+      become: true
       ansible.builtin.systemd_service:
         name: kafka
         daemon_reload: true
