--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -41,6 +41,9 @@
     - name: create kafka
       become: true
       become_user: kafka
+      become_method: sudo
+      become_flags: "-i"
+      shell: "env"
       containers.podman.podman_container:
         name: kafka-controller
         image: apache/kafka:3.9.0
