--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -27,7 +27,7 @@
   serial: 1
   become: true
   tasks:
-    - name: Create a user 'kafka' with a home directory
+    - name: remove Create a user 'kafka' with a home directory
       ansible.builtin.user:
         name: kafka
         state: absent
