--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -38,7 +38,7 @@
         state: quadlet
         # device: "/dev/sda:/dev/xvda:rwm"
         # network: host
-        user: 10001
+        # user: 10001
         env:
           KAFKA_NODE_ID: "{{ kafkaId }}"
           KAFKA_PROCESS_ROLES: controller
