--- a/inventory/pslab.yml
+++ b/inventory/pslab.yml
@@ -16,10 +16,13 @@ brokers:
   hosts:
     broker1:
       ansible_host: 10.0.141.91
+      kafkaId: 101
     broker2:
       ansible_host: 10.0.147.143
+      kafkaId: 102
     broker3:
       ansible_host: 10.0.161.4
+      kafkaId: 103
   vars:
     kafkaControllerQuorumVoters: 1@10.0.129.65:9093,2@10.0.149.189:9093,3@10.0.169.126:9093
 controllers:
