--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -25,10 +25,15 @@
   serial: 1
   become: true
   tasks:
-    - name: kafka
-      notify: Restart Kafka Controller
+    - name: kafkaold
+      notify: Restart Kafka broker
       containers.podman.podman_container:
         name: kafka-controller
+        state: absent
+    - name: kafka
+      notify: Restart Kafka broker
+      containers.podman.podman_container:
+        name: kafka-broker
         image: apache/kafka:3.9.0
         state: quadlet
         # device: "/dev/sda:/dev/xvda:rwm"
@@ -62,14 +67,14 @@
         daemon_reload: true
     - name: Enable service kafka and ensure it is not masked
       ansible.builtin.systemd_service:
-        name: kafka-controller
+        name: kafka-broker
         enabled: true
         masked: no
         state: started
   handlers:
     - name: Restart Kafka Controller
       ansible.builtin.systemd_service:
-        name: kafka-controller
+        name: kafka-broker
         state: restarted
 
 - name: Kafka Brokers
@@ -90,10 +95,10 @@
         env:
           KAFKA_NODE_ID: "{{ kafkaId }}"
           KAFKA_PROCESS_ROLES: broker
-          KAFKA_LISTENERS: 'PLAINTEXT://:9091,PLAINTEXT_HOST://:9092'
+          KAFKA_LISTENERS: "PLAINTEXT://:9091,PLAINTEXT_HOST://:9092"
           KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-          KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://{{ inventory_hostname }}:9091,PLAINTEXT_HOST://{{ inventory_hostname }}:9092'
-          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT      
+          KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://{{ inventory_hostname }}:9091,PLAINTEXT_HOST://{{ inventory_hostname }}:9092"
+          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
           KAFKA_CONTROLLER_QUORUM_VOTERS: "{{ kafkaControllerQuorumVoters }}"
           KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
           KAFKA_LOG_DIR: "/data"
