--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -42,6 +42,7 @@
           KAFKA_CONTROLLER_QUORUM_VOTERS: "{{ kafkaControllerQuorumVoters }}"
           KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
           KAFKA_LOG_DIR: "/data"
+          KAFKA_CLUSTER_ID: "{{ kafkaClusterID }}"
         ports:
           - "9093:9093"
         volumes:
@@ -92,6 +93,7 @@
           KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
           KAFKA_LOG_DIR: "/data"
           KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+          KAFKA_CLUSTER_ID: "{{ kafkaClusterID }}"
         ports:
           - "9091:9091"
           - "9092:9092"
