--- a/playbooks/kafkadelete.yml
+++ b/playbooks/kafkadelete.yml
@@ -3,23 +3,26 @@
   become: true
   tasks:
     - name: Enable service kafka and ensure it is not masked
+      ignore_errors: true
       ansible.builtin.systemd_service:
         name: kafka
         enabled: false
         masked: no
-        state: absent
+        state: stopped
     - name: Enable service kafka and ensure it is not masked
+      ignore_errors: true
       ansible.builtin.systemd_service:
         name: kafka-broker
         enabled: false
         masked: no
-        state: absent
+        state: stopped
     - name: Enable service kafka and ensure it is not masked
+      ignore_errors: true
       ansible.builtin.systemd_service:
         name: kafka-controller
         enabled: false
         masked: no
-        state: absent
+        state: stopped
     - name: delete kafka
       containers.podman.podman_container:
         name: kafka
