--- a/playbooks/kafkadelete.yml
+++ b/playbooks/kafkadelete.yml
@@ -36,12 +36,15 @@
         state: absent
         name: kafka-data
     - name: remove
+      ignore_errors: true
       ansible.builtin.file:
         path: /etc/containers/systemd/kafka-controller.container
     - name: remove
+      ignore_errors: true
       ansible.builtin.file:
         path: /etc/containers/systemd/kafka-broker.container
     - name: remove
+      ignore_errors: true
       ansible.builtin.file:
         path: /etc/containers/systemd/kafka.container
     - name: Daemon Reload
