--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -89,7 +89,7 @@
           KAFKA_PROCESS_ROLES: broker
           KAFKA_LISTENERS: "PLAINTEXT://:9091,PLAINTEXT_HOST://:9092"
           KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-          KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://{{ inventory_hostname }}:9091,PLAINTEXT_HOST://{{ inventory_hostname }}:9092"
+          KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://{{ ansible_host }}:9091,PLAINTEXT_HOST://{{ ansible_host }}:9092"
           KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
           KAFKA_CONTROLLER_QUORUM_VOTERS: "{{ kafkaControllerQuorumVoters }}"
           KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
