--- a/playbooks/logscale.yml
+++ b/playbooks/logscale.yml
@@ -36,7 +36,7 @@
         env:
           KAFKA_NODE_ID: "{{ kafkaId }}"
           KAFKA_PROCESS_ROLES: controller
-          KAFKA_LISTENERS: CONTROLLER://:9093
+          KAFKA_LISTENERS: CONTROLLER://{{ ansible_host }}:9093
           KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
           KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
           KAFKA_CONTROLLER_QUORUM_VOTERS: "{{ kafkaControllerQuorumVoters }}"
