--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -12,5 +12,5 @@
         state: present
     - name: Install the zulu-17 rpm from a remote repo
       ansible.builtin.dnf:
-        name: zulu17-jdk == 17.54+21
+        name: zulu17-jdk == 17.0.13-1
         state: present
