--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -6,11 +6,17 @@
       ansible.builtin.rpm_key:
         state: present
         key: https://www.azul.com/wp-content/uploads/2021/05/0xB1998361219BD9C9.txt
+      tags:
+        - openjdk
     - name: Install the azul rpm from a remote repo
       ansible.builtin.dnf:
         name: "https://cdn.azul.com/zulu/bin/zulu-repo-1.0.0-1.noarch.rpm"
         state: present
+      tags:
+        - openjdk
     - name: Install the zulu-17 rpm from a remote repo
       ansible.builtin.dnf:
         name: zulu17-jdk == 17.0.13-1
         state: present
+      tags:
+        - openjdk
