--- a/requirements.yml
+++ b/requirements.yml
@@ -2,4 +2,5 @@
 collections:
   - name: containers.podman
   - name: dragomirr.kafka
-    source: git+https://github.com/logscale-contrib/ansible-role-kafka.git
+    source: https://github.com/logscale-contrib/ansible-role-kafka.git
+    type: git
