--- a/requirements.yml
+++ b/requirements.yml
@@ -4,3 +4,4 @@ collections:
   - name: dragomirr.kafka
     source: https://github.com/logscale-contrib/ansible-role-kafka.git
     type: git
+    version: main
